[gd_scene load_steps=17 format=2]

[ext_resource path="res://resources/theme.tres" type="Theme" id=1]
[ext_resource path="res://scenes/UI/AnimatedButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://resources/font_big.tres" type="DynamicFont" id=3]
[ext_resource path="res://scenes/UI/MainMenu.gd" type="Script" id=4]
[ext_resource path="res://resources/Staatliches-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://resources/tileset.tres" type="TileSet" id=6]
[ext_resource path="res://resources/decorative_tileset.tres" type="TileSet" id=7]
[ext_resource path="res://scenes/GameCamera.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/Clouds.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/Emerald.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/EnemySpawner.tscn" type="PackedScene" id=12]
[ext_resource path="res://scenes/EnemyGoal.tscn" type="PackedScene" id=13]
[ext_resource path="res://scenes/Spikes.tscn" type="PackedScene" id=14]

[sub_resource type="OpenSimplexNoise" id=1]
seed = 42069

[sub_resource type="DynamicFont" id=3]
size = 24
extra_spacing_top = -5
extra_spacing_bottom = -7
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxEmpty" id=2]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="SampleScene" type="Node2D" parent="."]

[node name="GameCamera" parent="SampleScene" instance=ExtResource( 8 )]
position = Vector2( 160, 89 )
backgroundColor = Color( 0.964706, 0.87451, 0.890196, 1 )
shakeNoise = SubResource( 1 )

[node name="Clouds" parent="SampleScene/GameCamera" instance=ExtResource( 9 )]

[node name="TileMap" type="TileMap" parent="SampleScene"]
tile_set = ExtResource( 6 )
cell_size = Vector2( 18, 18 )
format = 1
tile_data = PoolIntArray( 65550, 2, 1, 65551, 2, 0, 65552, 2, 0, 65553, 2, 0, 65554, 2, 0, 65555, 2, 0, 65556, 2, 0, 65557, 2, 0, 65558, 2, 0, 65559, 2, 0, 65560, 2, 0, 65561, 2, 0, 65562, 2, 0, 65563, 2, 0, 65564, 2, 0, 65565, 2, 0, 65566, 2, 0, 65567, 2, 0, 65568, 2, 0, 65569, 2, 0, 65570, 2, 0, 65571, 2, 0, 65572, 2, 0, 65573, 2, 0, 65574, 2, 0, 65575, 2, 0, 65576, 2, 2, 131074, 4, 0, 131075, 4, 1, 131076, 4, 1, 131077, 4, 2, 196626, 0, 0, 196627, 0, 2, 262160, 0, 0, 262161, 0, 1, 262162, 0, 65540, 262163, 0, 65539, 262164, 0, 2, 327695, 0, 0, 327696, 0, 65540, 327697, 0, 65537, 327698, 0, 65537, 327699, 0, 65537, 327700, 0, 65538, 393224, 0, 0, 393225, 0, 1, 393226, 0, 2, 393231, 0, 65536, 393232, 0, 3, 393233, 0, 131073, 393234, 0, 4, 393235, 0, 3, 393236, 0, 131074, 524284, 0, 0, 524285, 0, 1, 524286, 0, 1, 524287, 0, 1, 458752, 0, 1, 458753, 0, 1, 458754, 0, 2, 458760, 0, 131072, 458761, 0, 4, 458762, 0, 65539, 458763, 0, 2, 458767, 0, 65536, 458768, 0, 65538, 458770, 0, 65536, 458771, 0, 65538, 589820, 0, 65536, 589821, 0, 65537, 589822, 0, 65537, 589823, 0, 65537, 524288, 0, 65537, 524289, 0, 65537, 524290, 0, 65539, 524291, 0, 1, 524292, 0, 1, 524293, 0, 2, 524297, 0, 131072, 524298, 0, 4, 524299, 0, 65539, 524300, 0, 2, 524303, 0, 65536, 524304, 0, 65539, 524305, 0, 1, 524306, 0, 65540, 524307, 0, 65538, 655356, 0, 131072, 655357, 0, 131073, 655358, 0, 131073, 655359, 0, 131073, 589824, 0, 131073, 589825, 0, 131073, 589826, 0, 131073, 589827, 0, 131073, 589828, 0, 131073, 589829, 0, 131074, 589834, 0, 131072, 589835, 0, 4, 589836, 0, 65538, 589839, 0, 65536, 589840, 0, 3, 589841, 0, 131073, 589842, 0, 131073, 589843, 0, 131074, 655371, 0, 65536, 655372, 0, 65538, 655375, 0, 65536, 655376, 0, 65538, 720907, 0, 65536, 720908, 0, 65538, 720911, 0, 65536, 720912, 0, 65538, 786443, 0, 65536, 786444, 0, 65539, 786445, 0, 1, 786446, 0, 1, 786447, 0, 65540, 786448, 0, 65538, 851979, 0, 131072, 851980, 0, 131073, 851981, 0, 131073, 851982, 0, 131073, 851983, 0, 131073, 851984, 0, 131074 )

[node name="DecorativeTileMap" type="TileMap" parent="SampleScene"]
tile_set = ExtResource( 7 )
cell_size = Vector2( 18, 18 )
format = 1
tile_data = PoolIntArray( 65552, 3, 0, 131086, 1610612743, 0, 131088, 3, 131072, 131089, 1610612743, 1, 196624, 3, 196608, 262159, 6, 0, 327690, 7, 1, 458751, 6, 0, 458756, 7, 2, 458764, 6, 1, 524296, 1610612743, 0, 589833, 1610612743, 1 )

[node name="Hazards" type="Node2D" parent="SampleScene"]
position = Vector2( 162, 72 )

[node name="Collectibles" type="Node2D" parent="SampleScene"]
position = Vector2( 162, 72 )

[node name="Loop2" parent="SampleScene" instance=ExtResource( 10 )]
position = Vector2( 243, 90 )

[node name="Loop3" parent="SampleScene" instance=ExtResource( 10 )]
position = Vector2( 72, 18 )

[node name="EnemySpawner" parent="SampleScene" instance=ExtResource( 12 )]
position = Vector2( -45, 126 )
startDirection = 1

[node name="EnemySpawner2" parent="SampleScene" instance=ExtResource( 12 )]
position = Vector2( 720, 18 )
startDirection = 1

[node name="EnemyGoal" parent="SampleScene" instance=ExtResource( 13 )]
position = Vector2( 54, 126 )

[node name="EnemyGoal2" parent="SampleScene" instance=ExtResource( 13 )]
position = Vector2( -63, 126 )

[node name="Spikes" parent="SampleScene" instance=ExtResource( 14 )]
position = Vector2( 162, 108 )

[node name="Spikes2" parent="SampleScene" instance=ExtResource( 14 )]
position = Vector2( 315, 144 )

[node name="Spikes3" parent="SampleScene" instance=ExtResource( 14 )]
position = Vector2( 108, 162 )
rotation = -4.71238

[node name="Backdrop" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 0
color = Color( 0.129412, 0.0823529, 0.192157, 0.713726 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 112.0
margin_top = 22.0
margin_right = 208.0
margin_bottom = 158.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_left = 12.0
margin_right = 84.0
margin_bottom = 6.0
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 0.380392 )
custom_fonts/font = ExtResource( 3 )
text = "CALCIUM CREW"

[node name="Label2" type="Label" parent="CenterContainer/VBoxContainer"]
margin_left = 14.0
margin_top = 10.0
margin_right = 81.0
margin_bottom = 28.5
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 0.380392 )
custom_fonts/font = SubResource( 3 )
text = "-QUEST-"

[node name="HSeparator" type="HSeparator" parent="CenterContainer/VBoxContainer"]
margin_top = 32.0
margin_right = 96.0
margin_bottom = 40.0
custom_constants/separation = 8
custom_styles/separator = SubResource( 2 )

[node name="PlayButton" parent="CenterContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 44.0
margin_bottom = 62.0
size_flags_horizontal = 4
text = "PLAY"

[node name="ConnectButton" parent="CenterContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 66.0
margin_bottom = 84.0
size_flags_horizontal = 4
text = "CONNECT"

[node name="OptionsButton2" parent="CenterContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 88.0
margin_bottom = 106.0
size_flags_horizontal = 4
text = "OPTIONS"

[node name="HSeparator2" type="HSeparator" parent="CenterContainer/VBoxContainer"]
margin_top = 110.0
margin_right = 96.0
margin_bottom = 114.0
custom_constants/separation = 4
custom_styles/separator = SubResource( 2 )

[node name="QuitButton" parent="CenterContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 118.0
margin_bottom = 136.0
size_flags_horizontal = 4
text = "QUIT"

[node name="BottomContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 8
theme = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="BottomContainer"]
modulate = Color( 1, 1, 1, 0.32549 )
margin_left = 4.0
margin_top = 166.0
margin_right = 316.0
margin_bottom = 176.0
size_flags_vertical = 8

[node name="VersionLabel" type="Label" parent="BottomContainer/HBoxContainer"]
margin_right = 199.0
margin_bottom = 10.0
size_flags_horizontal = 3
size_flags_vertical = 0
text = "V.0.0.1"

[node name="ConnectedLabel" type="Label" parent="BottomContainer/HBoxContainer"]
margin_left = 203.0
margin_right = 312.0
margin_bottom = 10.0
text = "No l2 wallet connected"
uppercase = true
